kubernetes/apps/kube-system/cilium/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
spec:
  hostnames: ["hubble.ironstone.casa"]
  parentRefs:
    - name: traefik-internal
      namespace: network
      sectionName: websecure
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
